--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,13 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/matcher_db
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-spring.jpa.hibernate.ddl-auto=create
+logging.level.org.springframework.security=DEBUG
+
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+spring.servlet.multipart.enabled=true
+app.upload.dir=./uploads
+spring.web.resources.static-locations=classpath:/static/,file:./uploads/
